# DR

./: .gitignore  README.md  pyproject.toml
dart_report_reader/: __init__.py  config.py
dart_report_reader/api/: __init__.py  client.py  document.py  filing.py  report.py
dart_report_reader/cache/: __init__.py  corp_code.py
dart_report_reader/parser/: __init__.py  document_parser.py  section_parser.py
dart_report_reader/vault/: __init__.py  md_builder.py
notebooks/: dart_report_reader_colab.ipynb
tests/: conftest.py  test_cache.py  test_config.py  test_document_parser.py  test_md_builder_document.py  test_parser.py  test_reader.py  test_vault.py
