[tool.poetry]
name = "dart-report-reader"
version = "0.5.0"
description = "DART OpenAPI 정기보고서 파싱 및 Obsidian Vault 생성 라이브러리"
authors = ["your-name <your@email.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "dart_report_reader" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
python-dateutil = "^2.8.2"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
responses = "^0.25.0"
black = "^24.0.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
